fixing packets; code cleanup part2;